--- a/Iterateurs/iterateurs-generateurs.ipynb
+++ b/Iterateurs/iterateurs-generateurs.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "# Examples with the '\\_\\_next__' implementation\n",
     "\n",
-    "Let us show how this works by simulating common `Python` generator.\n",
+    "Let us show how this works by simulating common `Python` generators.\n",
     "\n",
     "## The _range_ generator"
    ]
