--- a/Problem solvers/problem_solver.ipynb
+++ b/Problem solvers/problem_solver.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Problem solvers\n",
-    "This notebook aims to show some interfaces useful to implement an algorithm that solves a particular problem. We present 3 cases in increase order of complexity."
+    "This notebook aims to show some useful interfaces to implement an algorithm that solves a particular problem. We present 3 cases in increase order of complexity:\n",
+    "- The simple function\n",
+    "- The single class\n",
+    "- The API-Algorithm-Result scheme"
    ]
   },
   {
@@ -411,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
